--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,3 +1,17 @@
+body {
+  background-color: #e6e6e6 !important;
+}
+
 .App {
   text-align: center;
+}
+
+.main-content {
+  background-color: #f4f4f4;
+}
+
+.default-box-shadow {
+  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  -moz-box-shadow:    3px 3px 5px 6px #ccc;
+  box-shadow:         3px 3px 5px 6px #ccc;
 }
